--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -71,4 +71,4 @@ block content
                                 
                             .modal-footer                                    
                                 button.btn.btn-primary(type='submit', name='createUser') Create
-                                button.btn.btn-default(type='button', data-dismiss='modal') Close
+                                button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close
