--- a/templates/views/admin/analytics.jade
+++ b/templates/views/admin/analytics.jade
@@ -40,7 +40,7 @@ block content
                                     form.form-group.row(method='post', action='/admin/community-views')
                                         input(type='hidden', name='action', value='createCommunityView')
                                         button.btn.btn-primary(type='submit', name='createCommunityView') Create
-                                        button.btn.btn-default(type='button', data-dismiss='modal') Close
+                                        button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close
         if data.path === '/admin/discussion-views'
             if data.discussion_views.length > 0
                 .row
@@ -78,7 +78,7 @@ block content
                                     form.form-group.row(method='post', action='/admin/discussion-views')
                                         input(type='hidden', name='action', value='createDiscussionView')
                                         button.btn.btn-primary(type='submit', name='createDiscussionView') Create
-                                        button.btn.btn-default(type='button', data-dismiss='modal') Close 
+                                        button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close 
         if data.path === '/admin/group-views'
             if data.group_views.length > 0
                 .row
@@ -116,7 +116,7 @@ block content
                                     form.form-group.row(method='post', action='/admin/group-views')
                                         input(type='hidden', name='action', value='createGroupView')
                                         button.btn.btn-primary(type='submit', name='createGroupView') Create
-                                        button.btn.btn-default(type='button', data-dismiss='modal') Close 
+                                        button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close 
         if data.path === '/admin/report-views'
             if data.report_views.length > 0
                 .row
@@ -154,5 +154,5 @@ block content
                                     form.form-group.row(method='post', action='/admin/report-views')
                                         input(type='hidden', name='action', value='createReportView')
                                         button.btn.btn-primary(type='submit', name='createReportView') Create
-                                        button.btn.btn-default(type='button', data-dismiss='modal') Close 
+                                        button.btn.btn-default(type='button', data-dismiss='modal', onclick='window.location.reload();') Close 
 
