--- a/templates/views/admin/analytics.jade
+++ b/templates/views/admin/analytics.jade
@@ -32,7 +32,7 @@ block content
                         .modal-dialog(role='document')
                             .modal-content
                                 .modal-header
-                                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                         span(aria-hidden='true') ×
                                     h4#createCommunityViewLabel.modal-title Create a new Community View
                                 .modal-body
@@ -70,7 +70,7 @@ block content
                         .modal-dialog(role='document')
                             .modal-content
                                 .modal-header
-                                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                         span(aria-hidden='true') ×
                                     h4#createDiscussionViewLabel.modal-title Create a new Discussion View
                                 .modal-body
@@ -108,7 +108,7 @@ block content
                         .modal-dialog(role='document')
                             .modal-content
                                 .modal-header
-                                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                         span(aria-hidden='true') ×
                                     h4#createGroupViewLabel.modal-title Create a new Group View
                                 .modal-body
@@ -146,7 +146,7 @@ block content
                         .modal-dialog(role='document')
                             .modal-content
                                 .modal-header
-                                    button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                    button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                         span(aria-hidden='true') ×
                                     h4#createReportViewLabel.modal-title Create a new Report View
                                 .modal-body
