--- a/templates/views/admin/users.jade
+++ b/templates/views/admin/users.jade
@@ -33,7 +33,7 @@ block content
                     .modal-dialog(role='document')
                         .modal-content
                             .modal-header
-                                button.close(type='button', data-dismiss='modal', aria-label='Close')
+                                button.close(type='button', data-dismiss='modal', aria-label='Close', onclick='window.location.reload();')
                                     span(aria-hidden='true') ×
                                 h4#createUserLabel.modal-title Create a new User
                             .modal-body
