added site settings pages

--- a/templates/layouts/admin-default.jade
+++ b/templates/layouts/admin-default.jade
@@ -35,6 +35,8 @@ html(lang='en')
                 a.navbar-brand(href='/admin') DPITC
             #navbar.navbar-collapse.collapse
                 ul.nav.navbar-nav.navbar-right
+                    li 
+                        a(href='/admin/settings') Site Settings
                     li
                         a(href='#') Sign Out
     .container-fluid
