--- a/public/styles/bootstrap/dashboard.css
+++ b/public/styles/bootstrap/dashboard.css
@@ -103,3 +103,12 @@ body {
   display: inline-block;
   border-radius: 50%;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 50px;
+    background: #fff;
+} 
