--- a/templates/views/admin/groupViews_profile.jade
+++ b/templates/views/admin/groupViews_profile.jade
@@ -36,7 +36,11 @@ block content
                 p Loc
             .col-md-3    
                 mark #{data.group_views.loc}
-        button.btn.btn-link(type='submit', data-toggle='modal', data-target='#deleteGroupView') Delete Group View
+        br
+        br
+        footer.footer
+            .container
+                button.btn.btn-link(type='submit', data-toggle='modal', data-target='#deleteGroupView') Delete Group View
     #deleteGroupView.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteGroupViewLabel')
         .modal-dialog(role='document')
             .modal-content
