--- a/templates/views/admin/learningContent_profile.jade
+++ b/templates/views/admin/learningContent_profile.jade
@@ -45,8 +45,12 @@ block content
                         label Updated At
                     .col-md-2
                         mark #{data.learning_contents.publishedAt}
-                button.btn.btn-primary(type='submit') Save
-                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLearningContent') Delete Learning Content
+                br
+                br
+                footer.footer
+                    .container
+                        button.btn.btn-primary(type='submit') Save
+                        button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLearningContent') Delete Learning Content
             #deleteLearningContent.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLearningContentLabel')
                 .modal-dialog(role='document')
                     .modal-content
