--- a/templates/views/admin/lolinks_profile.jade
+++ b/templates/views/admin/lolinks_profile.jade
@@ -19,8 +19,12 @@ block content
                     .col-md-7
                         label Description
                         textarea.form-control(rows='15', name='description') #{data.lolinks.description}
-                button.btn.btn-primary(type='submit', name='editLOLink') Save
-                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLOLink') Delete LOLink
+                br
+                br
+                footer.footer
+                    .container
+                        button.btn.btn-primary(type='submit', name='editLOLink') Save
+                        button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLOLink') Delete LOLink
             #deleteLOLink.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLOLinkLabel')
                 .modal-dialog(role='document')
                     .modal-content
