--- a/templates/views/admin/lovideos_profile.jade
+++ b/templates/views/admin/lovideos_profile.jade
@@ -18,8 +18,12 @@ block content
                     .col-md-7
                         label Description
                         textarea.form-control(rows='10') #{data.lovideos.description}
-                button.btn.btn-primary(type='submit') Save
-                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLOVideo') Delete LOVideo
+                br
+                br
+                footer.footer
+                    .container
+                        button.btn.btn-primary(type='submit') Save
+                        button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLOVideo') Delete LOVideo
             #deleteLOVideo.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLOVideoLabel')
                 .modal-dialog(role='document')
                     .modal-content
