--- a/templates/views/admin/lsectors_profile.jade
+++ b/templates/views/admin/lsectors_profile.jade
@@ -19,8 +19,12 @@ block content
                                 option(selected='') Select...
                             each li,i in data.lindustries
                                 option(value=i) #{li.name}
-                button.btn.btn-primary(type='submit') Save  
-                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLSector') Delete LSector
+                br
+                br
+                footer.footer
+                    .container
+                        button.btn.btn-primary(type='submit') Save  
+                        button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteLSector') Delete LSector
             #deleteLSector.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteLSectorLabel')
                 .modal-dialog(role='document')
                     .modal-content
