--- a/templates/views/admin/publication_profile.jade
+++ b/templates/views/admin/publication_profile.jade
@@ -92,8 +92,12 @@ block content
                         label Downloads
                     .col-md-1
                         mark #{data.publications.downloads}
-                button.btn.btn-primary(type='submit', name='editPublication') Save
-                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deletePublication') Delete Publication
+                br
+                br
+                footer.footer
+                    .container
+                        button.btn.btn-primary(type='submit', name='editPublication') Save
+                        button.btn.btn-link(type='button', data-toggle='modal', data-target='#deletePublication') Delete Publication
             #deletePublication.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deletePublicationLabel')
                 .modal-dialog(role='document')
                     .modal-content
