--- a/templates/views/admin/user_profile.jade
+++ b/templates/views/admin/user_profile.jade
@@ -131,8 +131,12 @@ block content
                             option(selected='') Select...
                         each pub,i in data.publications
                             option(value=i) #{pub.title}
-            button.btn.btn-primary(type='submit', name='editUser') Save
-            button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteUser') Delete User
+        br
+        br
+        footer.footer
+            .container
+                button.btn.btn-primary(type='submit', name='editUser') Save
+                button.btn.btn-link(type='button', data-toggle='modal', data-target='#deleteUser') Delete User
         #deleteUser.modal.fade(tabindex='-1', role='dialog', aria-labelledby='deleteUserLabel')
             .modal-dialog(role='document')
                 .modal-content
